@@ -383,7 +383,7 @@ class FreshValueGenerator {
   @SuppressWarnings("removal") // b/321209431 -- maybe just use valueOf here?
   @Generates
   Integer generateInteger() {
-    return new Integer(generateInt());
+    return Integer.valueOf(generateInt());
   }
 
   @Generates
@@ -394,7 +394,7 @@ class FreshValueGenerator {
   @SuppressWarnings("removal") // b/321209431 -- maybe just use valueOf here?
   @Generates
   Long generateLongObject() {
-    return new Long(generateLong());
+    return Long.valueOf(generateLong());
   }
 
   @Generates
@@ -405,7 +405,7 @@ class FreshValueGenerator {
   @SuppressWarnings("removal") // b/321209431 -- maybe just use valueOf here?
   @Generates
   Float generateFloatObject() {
-    return new Float(generateFloat());
+    return Float.valueOf(generateFloat());
   }
 
   @Generates
@@ -416,7 +416,7 @@ class FreshValueGenerator {
   @SuppressWarnings("removal") // b/321209431 -- maybe just use valueOf here?
   @Generates
   Double generateDoubleObject() {
-    return new Double(generateDouble());
+    return Double.valueOf(generateDouble());
   }
 
   @Generates
@@ -427,7 +427,7 @@ class FreshValueGenerator {
   @SuppressWarnings("removal") // b/321209431 -- maybe just use valueOf here?
   @Generates
   Short generateShortObject() {
-    return new Short(generateShort());
+    return Short.valueOf(generateShort());
   }
 
   @Generates
@@ -438,7 +438,7 @@ class FreshValueGenerator {
   @SuppressWarnings("removal") // b/321209431 -- maybe just use valueOf here?
   @Generates
   Byte generateByteObject() {
-    return new Byte(generateByte());
+    return Byte.valueOf(generateByte());
   }
 
   @Generates
@@ -449,7 +449,7 @@ class FreshValueGenerator {
   @SuppressWarnings("removal") // b/321209431 -- maybe just use valueOf here?
   @Generates
   Character generateCharacter() {
-    return new Character(generateChar());
+    return Character.valueOf(generateChar());
   }
 
   @Generates
@@ -460,7 +460,7 @@ class FreshValueGenerator {
   @SuppressWarnings("removal") // b/321209431 -- maybe just use valueOf here?
   @Generates
   Boolean generateBooleanObject() {
-    return new Boolean(generateBoolean());
+    return Boolean.valueOf(generateBoolean());
   }
 
   @Generates
