@@ -307,8 +307,7 @@ class FreshValueGenerator {
 
     @Override
     public boolean equals(@Nullable Object obj) {
-      if (obj instanceof FreshInvocationHandler) {
-        FreshInvocationHandler that = (FreshInvocationHandler) obj;
+      if (obj instanceof FreshInvocationHandler that) {
         return identity == that.identity;
       }
       return false;
@@ -387,7 +386,7 @@ class FreshValueGenerator {
   @SuppressWarnings("removal") // b/321209431 -- maybe just use valueOf here?
   @Generates
   Integer generateInteger() {
-    return new Integer(generateInt());
+    return Integer.valueOf(generateInt());
   }
 
   @Generates
@@ -398,7 +397,7 @@ class FreshValueGenerator {
   @SuppressWarnings("removal") // b/321209431 -- maybe just use valueOf here?
   @Generates
   Long generateLongObject() {
-    return new Long(generateLong());
+    return Long.valueOf(generateLong());
   }
 
   @Generates
@@ -409,7 +408,7 @@ class FreshValueGenerator {
   @SuppressWarnings("removal") // b/321209431 -- maybe just use valueOf here?
   @Generates
   Float generateFloatObject() {
-    return new Float(generateFloat());
+    return Float.valueOf(generateFloat());
   }
 
   @Generates
@@ -420,7 +419,7 @@ class FreshValueGenerator {
   @SuppressWarnings("removal") // b/321209431 -- maybe just use valueOf here?
   @Generates
   Double generateDoubleObject() {
-    return new Double(generateDouble());
+    return Double.valueOf(generateDouble());
   }
 
   @Generates
@@ -431,7 +430,7 @@ class FreshValueGenerator {
   @SuppressWarnings("removal") // b/321209431 -- maybe just use valueOf here?
   @Generates
   Short generateShortObject() {
-    return new Short(generateShort());
+    return Short.valueOf(generateShort());
   }
 
   @Generates
@@ -442,7 +441,7 @@ class FreshValueGenerator {
   @SuppressWarnings("removal") // b/321209431 -- maybe just use valueOf here?
   @Generates
   Byte generateByteObject() {
-    return new Byte(generateByte());
+    return Byte.valueOf(generateByte());
   }
 
   @Generates
@@ -453,7 +452,7 @@ class FreshValueGenerator {
   @SuppressWarnings("removal") // b/321209431 -- maybe just use valueOf here?
   @Generates
   Character generateCharacter() {
-    return new Character(generateChar());
+    return Character.valueOf(generateChar());
   }
 
   @Generates
@@ -464,7 +463,7 @@ class FreshValueGenerator {
   @SuppressWarnings("removal") // b/321209431 -- maybe just use valueOf here?
   @Generates
   Boolean generateBooleanObject() {
-    return new Boolean(generateBoolean());
+    return Boolean.valueOf(generateBoolean());
   }
 
   @Generates
