@@ -50,7 +50,7 @@ public class FunctionsTest extends TestCase {
 
   public void testIdentity_notSame() {
     Function<Long, Long> identity = Functions.identity();
-    assertNotSame(new Long(135135L), identity.apply(new Long(135135L)));
+    assertNotSame(Long.valueOf(135135L), identity.apply(Long.valueOf(135135L)));
   }
 
   @J2ktIncompatible
@@ -378,8 +378,8 @@ public class FunctionsTest extends TestCase {
 
     @Override
     public boolean equals(@Nullable Object obj) {
-      if (obj instanceof CountingSupplier) {
-        return this.value == ((CountingSupplier) obj).value;
+      if (obj instanceof CountingSupplier supplier) {
+        return this.value == supplier.value;
       }
       return false;
     }
