@@ -84,15 +84,15 @@ public class MutableClassToInstanceMapTest extends TestCase {
      * because we know that newClassMap() is implemented using ConstrainedMap which is itself
      * well-tested. A purist would object to this, but what can I say, we're dirty cheaters.
      */
-    map.put(Integer.class, new Integer(5));
-    assertThrows(ClassCastException.class, () -> map.put(Double.class, new Long(42)));
+    map.put(Integer.class, Integer.valueOf(5));
+    assertThrows(ClassCastException.class, () -> map.put(Double.class, Long.valueOf(42)));
     // Won't compile: map.put(String.class, "x");
   }
 
   public void testPutAndGetInstance() {
-    assertNull(map.putInstance(Integer.class, new Integer(5)));
+    assertNull(map.putInstance(Integer.class, Integer.valueOf(5)));
 
-    Integer oldValue = map.putInstance(Integer.class, new Integer(7));
+    Integer oldValue = map.putInstance(Integer.class, Integer.valueOf(7));
     assertEquals(5, (int) oldValue);
 
     Integer newValue = map.getInstance(Integer.class);
@@ -102,7 +102,7 @@ public class MutableClassToInstanceMapTest extends TestCase {
   }
 
   public void testNull() {
-    assertThrows(NullPointerException.class, () -> map.put(null, new Integer(1)));
+    assertThrows(NullPointerException.class, () -> map.put(null, Integer.valueOf(1)));
     map.putInstance(Integer.class, null);
     assertNull(map.get(Integer.class));
     assertNull(map.getInstance(Integer.class));
